1.0.0 (2024-12-21)

 * Initial release
