@@ -28,8 +28,10 @@ target_compile_definitions (${PROJECT_NAME} PUBLIC
 
 include (GNUInstallDirs)
 install (TARGETS ${PROJECT_NAME} DESTINATION ${CMAKE_INSTALL_BINDIR})
-install (PROGRAMS ${PROJECT_NAME}-install DESTINATION ${CMAKE_INSTALL_BINDIR})
-install (FILES sdn.1 sdn-install.1 DESTINATION ${CMAKE_INSTALL_MANDIR}/man1)
+install (PROGRAMS ${PROJECT_NAME}-install ${PROJECT_NAME}-view
+	DESTINATION ${CMAKE_INSTALL_BINDIR})
+install (FILES sdn.1 sdn-install.1 sdn-view.1
+	DESTINATION ${CMAKE_INSTALL_MANDIR}/man1)
 install (FILES LICENSE DESTINATION ${CMAKE_INSTALL_DOCDIR})
 
 set (CPACK_PACKAGE_DESCRIPTION_SUMMARY "Directory navigator")
