@@ -1,6 +1,6 @@
 .Dd October 27, 2020
 .Dt SDN-INSTALL 1
-.Os Linux
+.Os
 .Sh NAME
 .Nm sdn-install
 .Nd integrate sdn with the shell
