@@ -1,0 +1,23 @@
+.Dd December 28, 2024
+.Dt SDN-VIEW 1
+.Os
+.Sh NAME
+.Nm sdn-view
+.Nd run Midnight Commander view configuration externally
+.Sh SYNOPSIS
+.Nm sdn-view
+.Ar path
+.Sh DESCRIPTION
+.Nm
+invokes
+.Ev PAGER
+or a fallback pager on the passed filename.
+.Pp
+If it succeeds in finding a
+.Xr mc 1
+.Pa mc.ext.ini
+file, it will first process it, and apply any matching filter.
+.Sh REPORTING BUGS
+Use
+.Lk https://git.janouch.name/p/sdn
+to report bugs, request features, or submit pull requests.
