@@ -1,7 +1,7 @@
 \" https://mandoc.bsd.lv/man/roff.7.html#Sentence_Spacing
 .Dd October 27, 2020
 .Dt SDN 1
-.Os Linux
+.Os
 .Sh NAME
 .Nm sdn
 .Nd directory navigator
@@ -68,8 +68,8 @@ and you can use the
 .Xr dircolors 1
 utility to initialize this variable.
 .It Ev PAGER
-The viewer program to be launched by the F3 key binding as well as to show
-the internal help message.
+The viewer program to be launched by the F3 and F13 key bindings as well as
+to show the internal help message.
 If none is set, it defaults to
 .Xr less 1 .
 .It Ev VISUAL , Ev EDITOR
